# steam-command-runner

./: Cargo.toml  README.md  flake.nix
.github/workflows/: release.yml
docs/: architecture.md  usage.md
src/: error.rs  lib.rs
src/cli/: args.rs  mod.rs
src/cli/commands/: compat.rs  config.rs  gamescope.rs  install.rs  launch_options.rs  mod.rs  proton.rs  run.rs  search.rs  uninstall.rs
src/compat_tool/: env.rs  install.rs  mod.rs  vdf.rs  verbs.rs
src/config/: error.rs  game.rs  global.rs  merged.rs  mod.rs
src/hooks/: mod.rs
src/proton/: locator.rs  mod.rs
src/runner/: mod.rs  native.rs  proton.rs
src/shim/: gamescope.rs  mod.rs
src/steam/: installed_games.rs  localconfig.rs  mod.rs  userdata.rs
src/steam_api/: mod.rs  search.rs
src/steam_command_runner/: error.rs  mod.rs
tests/: config.rs  update-steam.rs
tests/features/config/: config.feature  config.toml
tests/features/update-steam/: update-steam.feature
