[package]
name = "steamdeck-command-runner"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = {version = "1", features = ["derive"]}
shlex = "1.3.0"
thiserror = "1.0.63"
toml = "0.8"

[dev-dependencies]
cucumber = "0.21"
futures = "0.3"

[[test]]
name = "config"
harness = false

[[test]]
name = "update-steam"
harness = false
